--- a/src/app/mitav/mitav-geriatric-for-department/mitav-geriatric-for-department.component.scss
+++ b/src/app/mitav/mitav-geriatric-for-department/mitav-geriatric-for-department.component.scss
@@ -464,3 +464,8 @@
     margin-top: 0; /* Ensure no gap between the title and gauge */
 
   }
+
+  .body {
+    margin-top:  50px;
+    margin-bottom: 50px;
+  }
