--- a/src/app/chameleon-reports/epidemiological-investigation/epidemiological-investigation.component.scss
+++ b/src/app/chameleon-reports/epidemiological-investigation/epidemiological-investigation.component.scss
@@ -328,4 +328,7 @@
     align-items: center;
     height: 100px; /* Adjust height as needed */
   }
-  
+  .body {
+    margin-top:  50px;
+    margin-bottom: 50px;
+  }
