--- a/src/app/chameleon-reports/user-log-per-case-number-report/user-log-per-case-number-report.component.html
+++ b/src/app/chameleon-reports/user-log-per-case-number-report/user-log-per-case-number-report.component.html
@@ -2,174 +2,166 @@
 
 <div class="body">
   <!-- Page Title with Dynamic Results Count -->
-  <div class="nine">
-    <h1>{{ titleUnit }}<span>{{ Title1 }}{{ totalResults }}</span></h1>
-  </div>
+ 
 
+  <!-- Filter Card -->
+  <div class="filter-card">
+    <form [formGroup]="searchForm" dir="rtl" class="filter-form">
+      <div class="container-fluid mb-2">
+        <div class="row search-count">
+          <div class="col">
+            <div dir="rtl" class="card">
+              <div dir="rtl" class="card-body">
+                <div class="filter-container">
+                  <!-- admissionNo -->
+                  <mat-form-field class="filter-field">
+                    <mat-label>מספר מקרה</mat-label>
+                    <input matInput formControlName="admissionNo" placeholder="הזן מספר מקרה" />
+                  </mat-form-field>
 
- <!-- Filter Card -->
- <div class="filter-card">
-  <form [formGroup]="searchForm" dir="rtl" class="filter-form">
-    <div class="container-fluid mb-2">
-      <div class="row search-count">
-        <div class="col">
-          <div dir="rtl" class="card">
-            <div dir="rtl" class="card-body">
-              <div class="filter-container">
-                <!-- AdmissionNo Input Field -->
-                <mat-form-field class="filter-field">
-                  <mat-label>מספר מקרה</mat-label>
-                  <input matInput formControlName="AdmissionNo" placeholder="הזן מספר מקרה" />
-                </mat-form-field>
+                  <!-- idNo -->
+                  <mat-form-field class="filter-field">
+                    <mat-label>מספר תעודת זהות</mat-label>
+                    <input matInput formControlName="idNo" placeholder="הזן מספר תעודת זהות" />
+                  </mat-form-field>
 
-                <!-- IDNo Input Field -->
-                <mat-form-field class="filter-field">
-                  <mat-label>מספר תעודת זהות</mat-label>
-                  <input matInput formControlName="IDNo" placeholder="הזן מספר תעודת זהות" />
-                </mat-form-field>
+                  <!-- userCode autocomplete -->
+                  <mat-form-field class="filter-field">
+                    <mat-label>חיפוש עובד </mat-label>
+                    <input type="text" matInput [formControl]="userCodeControl" [matAutocomplete]="autoUser" />
+                    <mat-autocomplete #autoUser="matAutocomplete" [displayWith]="displayUser">
+                      <mat-option *ngFor="let option of filteredUserOptions" [value]="option">
+                        {{ option.displayName }}
+                      </mat-option>
+                    </mat-autocomplete>
+                  </mat-form-field>
 
+                  <!-- startDate -->
+                  <mat-form-field class="filter-field">
+                    <mat-label>תאריך התחלה</mat-label>
+                    <input matInput [matDatepicker]="startDatePicker" formControlName="startDate" placeholder="בחר תאריך התחלה" />
+                    <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+                    <mat-datepicker #startDatePicker></mat-datepicker>
+                  </mat-form-field>
 
-<!-- UserCode Autocomplete Field -->
-<mat-form-field class="filter-field">
-  <mat-label>חיפוש עובד </mat-label>
-  <input type="text" matInput [formControl]="userCodeControl" [matAutocomplete]="autoUser">
-  <mat-autocomplete #autoUser="matAutocomplete" [displayWith]="displayUser">
-    <mat-option *ngFor="let option of filteredUserOptions" [value]="option">
-      {{ option.DisplayName }}
-    </mat-option>
-  </mat-autocomplete>
-</mat-form-field>
+                  <!-- endDate -->
+                  <mat-form-field class="filter-field">
+                    <mat-label>תאריך סיום</mat-label>
+                    <input matInput [matDatepicker]="endDatePicker" formControlName="endDate" placeholder="בחר תאריך סיום" />
+                    <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+                    <mat-datepicker #endDatePicker></mat-datepicker>
+                  </mat-form-field>
 
+                  <!-- Fetch -->
+                  <button mat-button (click)="fetchData()" mat-raised-button color="primary" class="custom-button" style="margin-right: 10px;">
+                    <i class="material-icons">search</i>
+                  </button>
 
+                  <!-- globalFilter -->
+                  <mat-form-field class="long-search-bar" style="flex-grow: 1; margin-right: 10px;">
+                    <mat-label class="filters" style="color: blue">חיפוש</mat-label>
+                    <input matInput formControlName="globalFilter" class="search-input" />
+                  </mat-form-field>
 
-                <!-- Start Date Picker for RecordOpenDate -->
-                <mat-form-field class="filter-field">
-                  <mat-label>תאריך התחלה</mat-label>
-                  <input matInput [matDatepicker]="startDatePicker" formControlName="StartDate" placeholder="בחר תאריך התחלה" />
-                  <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
-                  <mat-datepicker #startDatePicker></mat-datepicker>
-                </mat-form-field>
+                  <!-- Icons -->
+                  <img src="../../assets/excel.png" alt="Download" (click)="exportToExcel()" class="download-icon icon" width="50px" style="margin-left: 10px;" />
 
-                <!-- End Date Picker for RecordOpenDate -->
-                <mat-form-field class="filter-field">
-                  <mat-label>תאריך סיום</mat-label>
-                  <input matInput [matDatepicker]="endDatePicker" formControlName="EndDate" placeholder="בחר תאריך סיום" />
-                  <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
-                  <mat-datepicker #endDatePicker></mat-datepicker>
-                </mat-form-field>
+                  <button
+                    mat-button
+                    (click)="resetFilters()"
+                    mat-raised-button
+                    color="primary"
+                    class="custom-button"
+                    matTooltip="איפוס סינונים"
+                    style="margin-left: 10px;">
+                    <i class="material-icons">refresh</i>
+                  </button>
 
-                <!-- Fetch Data Button (Search Icon) -->
-                <button mat-button (click)="fetchData()" mat-raised-button color="primary" class="custom-button" style="margin-right: 10px;">
-                  <i class="material-icons">search</i>
-                </button>
-
-                <!-- Global Filter Field -->
-                <mat-form-field class="long-search-bar" style="flex-grow: 1; margin-right: 10px;">
-                  <mat-label class="filters" style="color: blue">חיפוש</mat-label>
-                  <input matInput formControlName="globalFilter" class="search-input" />
-                </mat-form-field>
-
-                <!-- Icons for Excel Export and Reset Filters -->
-                <img src="../../assets/excel.png" alt="Download" (click)="exportToExcel()" class="download-icon icon" width="50px" style="margin-left: 10px;" />
-
-                <button 
-                  mat-button 
-                  (click)="resetFilters()" 
-                  mat-raised-button 
-                  color="primary" 
-                  class="custom-button" 
-                  matTooltip="איפוס סינונים" 
-                  style="margin-left: 10px;">
-                  <i class="material-icons">refresh</i>
-                </button>
-
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </div> <!-- End of container-fluid -->
-  </form>
-</div> <!-- End of filter-card -->
+      </div> <!-- End container-fluid -->
+    </form>
+  </div> <!-- End filter-card -->
 
-  
-  <!-- Data Table (Conditionally Displayed) -->
-  <mat-table *ngIf="matTableDataSource.data.length > 0" [dataSource]="matTableDataSource" matSort dir="rtl" class="mat-elevation-z8">
-    <!-- AdmissionNo Column -->
-    <ng-container matColumnDef="AdmissionNo">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> מספר מקרה </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.AdmissionNo }} </mat-cell>
+  <!-- Data Table -->
+  <!-- Data Table -->
+  <table mat-table [dataSource]="matTableDataSource" matSort dir="rtl" class="mat-elevation-z8">
+
+    <!-- admissionNo -->
+    <ng-container matColumnDef="admissionNo">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר מקרה</th>
+      <td mat-cell *matCellDef="let element">{{ element.admissionNo }}</td>
     </ng-container>
 
-    <!-- AnswerText10 Column -->
-    <ng-container matColumnDef="AnswerText10">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>חוצץ</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.AnswerText10 }} </mat-cell>
+    <!-- answerText10 -->
+    <ng-container matColumnDef="answerText10">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>חוצץ</th>
+      <td mat-cell *matCellDef="let element">{{ element.answerText10 }}</td>
     </ng-container>
 
-    <!-- AnswerText398 Column -->
-    <ng-container matColumnDef="AnswerText398">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> סקטור</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.AnswerText398 }} </mat-cell>
+    <!-- answerText398 -->
+    <ng-container matColumnDef="answerText398">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>סקטור</th>
+      <td mat-cell *matCellDef="let element">{{ element.answerText398 }}</td>
     </ng-container>
 
-    <!-- FirstName Column -->
-    <ng-container matColumnDef="FirstName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> (עובד)שם פרטי </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.FirstName }} </mat-cell>
+    <!-- firstName -->
+    <ng-container matColumnDef="firstName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>(עובד)שם פרטי</th>
+      <td mat-cell *matCellDef="let element">{{ element.firstName }}</td>
     </ng-container>
 
-    <!-- LastName Column -->
-    <ng-container matColumnDef="LastName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> (עובד)שם משפחה </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.LastName }} </mat-cell>
+    <!-- lastName -->
+    <ng-container matColumnDef="lastName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>(עובד)שם משפחה</th>
+      <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
     </ng-container>
 
-    <!-- IDNo Column -->
-    <ng-container matColumnDef="IDNo">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> מספר זהות </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.IDNo }} </mat-cell>
+    <!-- idNo -->
+    <ng-container matColumnDef="idNo">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר זהות</th>
+      <td mat-cell *matCellDef="let element">{{ element.idNo }}</td>
     </ng-container>
 
-    <!-- MedicalLicense Column -->
-    <ng-container matColumnDef="MedicalLicense">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> רישיון רפואי </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.MedicalLicense || '' }} </mat-cell>
+    <!-- medicalLicense -->
+    <ng-container matColumnDef="medicalLicense">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>רישיון רפואי</th>
+      <td mat-cell *matCellDef="let element">{{ element.medicalLicense || '' }}</td>
     </ng-container>
 
-    <!-- RecordName Column -->
-    <ng-container matColumnDef="RecordName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> שם רשומה </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.RecordName }} </mat-cell>
+    <!-- recordName -->
+    <ng-container matColumnDef="recordName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>שם רשומה</th>
+      <td mat-cell *matCellDef="let element">{{ element.recordName }}</td>
     </ng-container>
 
-    <!-- RecordOpenDate Column -->
-    <ng-container matColumnDef="RecordOpenDate">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> תאריך כניסה לרשומה </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.RecordOpenDate | date: 'dd/MM/yyyy' }} </mat-cell>
+    <!-- recordOpenDate -->
+    <ng-container matColumnDef="recordOpenDate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך כניסה לרשומה</th>
+      <td mat-cell *matCellDef="let element">{{ element.recordOpenDate | date:'dd/MM/yyyy' }}</td>
     </ng-container>
 
-    <!-- RecordOpenTime Column -->
-    <ng-container matColumnDef="RecordOpenTime">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> זמן כניסה לרשומה </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.RecordOpenTime | date: 'HH:mm' }} </mat-cell>
+    <!-- recordOpenTime -->
+    <ng-container matColumnDef="recordOpenTime">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>זמן כניסה לרשומה</th>
+      <td mat-cell *matCellDef="let element">{{ element.recordOpenTime | date:'HH:mm' }}</td>
     </ng-container>
 
-    <!-- UnitName Column -->
-    <ng-container matColumnDef="UnitName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> שם יחידה </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.UnitName }} </mat-cell>
+    <!-- unitName -->
+    <ng-container matColumnDef="unitName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>שם יחידה</th>
+      <td mat-cell *matCellDef="let element">{{ element.unitName }}</td>
     </ng-container>
 
-    <!-- Table Header Row Definition -->
-    <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
-
-    <!-- Table Data Row Definition -->
-    <mat-row *matRowDef="let row; columns: columns" class="mat-row"></mat-row>
-  </mat-table>
-
-  <!-- Paginator Component -->
-  <mat-paginator 
+    <!-- header & rows -->
+    <tr mat-header-row *matHeaderRowDef="columns"></tr>
+    <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+  </table>
+  <!-- Paginator -->
+  <mat-paginator
     [length]="matTableDataSource.paginator?.length || 0"
     [pageIndex]="matTableDataSource.paginator?.pageIndex"
     [pageSize]="matTableDataSource.paginator?.pageSize"
